--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,27 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "11"
+    "node": "10"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
+    "@line/bot-sdk": "^6.8.4",
+    "air-thai-api": "^1.0.1",
+    "body-parser": "^1.19.0",
+    "dialogflow": "^1.2.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.26.0",
+    "pb-util": "^0.1.3"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.0",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "typescript": "^3.8.0"
   },
-  "private": true
+  "private": true,
+  "author": "Dusadee Srijulpo <dusadee.srj@gmail.com>"
 }
