--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -3,13 +3,20 @@
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "noImplicitAny": false,
     "outDir": "lib",
+    "moduleResolution": "node",
     "sourceMap": true,
+    "target": "es2019",
     "strict": true,
-    "target": "es2017"
+    "declaration": true,
+    "allowJs": true
   },
   "compileOnSave": true,
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
